# KitsuneEngine

./: .gitignore  LICENSE  README.md
res/meshes/: arena.mtl  cube.mtl  large-sphere.mtl  monkey.mtl  tank.mtl
res/shaders/: basicShader.frag  basicShader.vert
src/: CMakeLists.txt  breakout.cpp  breakout.hpp  compile.sh  display.cpp  display.h  display.hpp  game.cpp  game.h  game.hpp  input.cpp  input.h  input.hpp  kitsune-commons.h  kitsune.hpp  main.cpp  makefile  mathObjects.hpp  playerControl.lua
src/node/: node.cpp  node.hpp
src/node/physics/: kinematicbody.cpp  kinematicbody.hpp  physics.hpp  staticbody.cpp  staticbody.hpp
src/node2d/: node2d.cpp  node2d.hpp  rect2d.cpp  rect2d.hpp  sprite.cpp  sprite.hpp
src/render/: mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/the_shadow_realm/: README.txt  math.cpp  math.hpp  mathObjects.cpp  mathObjects.hpp  rect2d.hpp
